# invariantprotocol

./: .gitignore  Makefile  README.md
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml
go/: .golangci.yml  cli.go  cli_test.go  descriptor.go  descriptor_test.go  errors.go  go.mod  go.sum  grpc_client.go  grpc_client_test.go  grpc_server.go  grpc_server_test.go  http.go  http_client.go  http_client_test.go  http_test.go  http_transcoding.go  interceptor_test.go  mcp.go  mcp_test.go  schema.go  schema_test.go  server.go  server_test.go
go/tests/manual/: .mcp.json  go.mod  go.sum  main.go  opencode.jsonc
proto/: buf.gen.yaml
proto/invariant/v1/: types.proto
python/: pyproject.toml
python/src/invariant/: __init__.py  descriptor.py  errors.py  http_client.py  schema.py  server.py
python/src/invariant/projections/: cli.py  grpc.py  http.py  mcp.py
python/tests/: conftest.py  test_cli.py  test_descriptor.py  test_grpc.py  test_http.py  test_http_client.py  test_interceptor.py  test_mcp.py  test_remote_mcp.py  test_schema.py  test_server.py
python/tests/manual/: .mcp.json  grpc_server.py  mcp_server.py  opencode.jsonc
python/tests/proto/: buf.gen.yaml  descriptor.binpb  greet.proto
